people card/header spacing issues on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -267,8 +267,8 @@ header .title-wrapper {
 
 header nav {
     float:none;
-    width:90%;
-    padding:0 5% 5% 5%;
+    width:100%;
+    padding:0 0 .2em 0;
     display:block;
     background-color:#eee;
     line-height:1.75em;
